--- a/devsSuperPoderosas/index.html
+++ b/devsSuperPoderosas/index.html
@@ -18,7 +18,7 @@
       <a href="https://github.com/RaissaMariaB" target="_blank">
         <img src="https://avatars.githubusercontent.com/u/51512166?s=460&u=888f3391fd21e31b433308dd8ff0ccaaa2503cb5&v=4" alt="Raissa Barata"/>
       </a>
-      <p>Sou a prof fofa Raissa Barata</p>
+      <p>Sou a prof fofa Raissa</p>
     </div>
 
   </section>
@@ -28,7 +28,12 @@
   </h2>
 
   <section class="container">
-
+    <div class="container_aluna">
+      <a href="https://github.com/jumara-pimenta" target="_blank">
+        <img src="https://avatars.githubusercontent.com/u/79213553?s=460&u=0481f6e9269575f3f62714a0f2f31fa22cc16685&v=4" alt="Jumara Pimenta"/>
+      </a>
+      <p>Sou Jumara Pimenta</p>
+    </div>
 
   </section>
 
